# 3d-graph-explorer

./: .gitignore  README.md  my_solution.py  optimize_explore.py  optimize_surveil.py  optimize_weights.py  pyproject.toml  run_eval.py
docs/: RULES.md  graph_format.md  results_format.md
exploration_challenge/: __init__.py  evaluator.py  graph_io.py  observation.py  params.toml  simulator.py
exploration_challenge/_internal/: __init__.py  config.py  progress.py  seeding.py  sensor.py
exploration_challenge/policies/: random_walk.py
exploration_challenge/viz/: __init__.py  core.py  mesh.py  rerun_compat.py  styles.py
