[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "exploration-hackathon"
version = "0.1.0"
description = "Online 3D roadmap-graph exploration & surveillance hackathon (3 UAVs)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0",
]

[project.optional-dependencies]
viz = ["rerun-sdk>=0.20"]

[tool.setuptools.packages.find]
where = ["."]
include = ["exploration_challenge*"]

[tool.setuptools.package-data]
exploration_challenge = ["params.toml"]
